added latestbooks and about section on the homepage

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,12 @@
 *{
   font-family: "Merriweather", serif;
 }
+
+body{
+  background-color: #fffdf5;
+}
+
+
 h1,h2,h3,h4,h5,h6{
     font-family: "Spectral SC", serif;
 }
